@@ -1,3 +1,8 @@
+2020-10-21  Bjoern Ricks  <bjoern.ricks@intevation.de>  (wk)
+
+	* main.cpp: Set DISPLAY environment variable if --display option
+	is passed to pinentry-qt.
+
 2010-10-19  Werner Koch  <wk@g10code.com>
 
 	* pinentry.c (pinentry_have_display): Also detect
